# HolyImageDownloader

./: .gitignore  LICENSE  Notes.md  README.md  README_ru.md  pyproject.toml  requirements.txt  setup.cfg
HolyImageDownloader/: ENUMS.py  __init__.py  __main__.py  batch.py  config.py  downloader.py  google.py  google_new.py  image.py  result.py  searchinfo.py  utils.py  website.py
reverse/: NOTES.md  NOTES_ru.md  headers.js  images.js  parsing.js
