[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "HolyImageDownloader"
dynamic = ['version']
dependencies = [
    "aiofiles==23.2.1",
    "aiohttp==3.9.0",
    "aiosignal==1.3.1",
    "attrs==23.1.0",
    "beautifulsoup4==4.12.2",
    "build==1.0.3",
    "click==8.1.7",
    "colorama==0.4.6",
    "filetype==1.2.0",
    "frozenlist==1.4.0",
    "HolyImageDownloader==0.0.3",
    "idna==3.4",
    "lxml==4.9.3",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "multidict==6.0.4",
    "packaging==23.2",
    "Pillow==10.1.0",
    "Pygments==2.17.2",
    "pyproject_hooks==1.0.0",
    "rich==13.7.0",
    "setuptools==69.0.2",
    "shellingham==1.5.4",
    "soupsieve==2.5",
    "typer==0.9.0",
    "typing_extensions==4.8.0",
    "yarl==1.9.3"
]
requires-python = ">=3.10"
authors = [
  {name = "holy-jesus", email = "hj@holy-coder.ru"}
]
maintainers = [
  {name = "holy-jesus", email = "hj@holy-coder.ru"}
]
description = "Downloads images from Google in matter seconds."
readme = "README.md"
license = {text = "MIT"}
keywords = ["google", "google images", "images", "download images"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/holy-jesus/HolyImageDownloader"
Issues = "https://github.com/holy-jesus/HolyImageDownloader/issues"

[project.scripts]
ImageDownloader = "HolyImageDownloader.__main__:app"

[tool.setuptools.dynamic]
version = {attr = "HolyImageDownloader.__version__"}