[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "HolyImageDownloader"
dynamic = ['version']
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.3.5",
    "aiohttp==3.10.3",
    "aiosignal==1.3.1",
    "attrs==24.2.0",
    "beautifulsoup4==4.12.3",
    "build==1.2.1",
    "click==8.1.7",
    "colorama==0.4.6",
    "filetype==1.2.0",
    "frozenlist==1.4.1",
    "HolyImageDownloader==0.0.3",
    "idna==3.7",
    "lxml==5.3.0",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "multidict==6.0.5",
    "packaging==24.1",
    "pillow==10.4.0",
    "Pygments==2.18.0",
    "pyproject_hooks==1.1.0",
    "rich==13.7.1",
    "setuptools==72.1.0",
    "shellingham==1.5.4",
    "soupsieve==2.5",
    "typer==0.12.3",
    "typing_extensions==4.12.2",
    "yarl==1.9.4"
]
requires-python = ">=3.10"
authors = [
  {name = "holy-jesus", email = "hj@holy-coder.ru"}
]
maintainers = [
  {name = "holy-jesus", email = "hj@holy-coder.ru"}
]
description = "Downloads images from Google in matter seconds."
readme = "README.md"
license = {text = "MIT"}
keywords = ["google", "google images", "images", "download images"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/holy-jesus/HolyImageDownloader"
Issues = "https://github.com/holy-jesus/HolyImageDownloader/issues"

[project.scripts]
ImageDownloader = "HolyImageDownloader.__main__:app"

[tool.setuptools.dynamic]
version = {attr = "HolyImageDownloader.__version__"}