[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "HolyImageDownloader"
dynamic = ['version']
dependencies = [
    "aiofiles==24.1.0",
    "aiohttp==3.11.10",
    "beautifulsoup4==4.12.3",
    "json5==0.10.0",
    "js2py==0.74",
    "lxml==5.3.0",
    "pillow==11.0.0",
    "typer==0.15.1"
]
requires-python = ">=3.10"
authors = [
  {name = "holy-jesus", email = "hj@holy-coder.ru"}
]
maintainers = [
  {name = "holy-jesus", email = "hj@holy-coder.ru"}
]
description = "Downloads images from Google in matter seconds."
readme = "README.md"
license = {text = "MIT"}
keywords = ["google", "google images", "images", "download images"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://github.com/holy-jesus/HolyImageDownloader"
Issues = "https://github.com/holy-jesus/HolyImageDownloader/issues"

[project.scripts]
ImageDownloader = "HolyImageDownloader.__main__:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["HolyImageDownloader*"]
exclude = ["reverse*"]
namespaces = false

[tool.setuptools.dynamic]
version = {attr = "HolyImageDownloader.__version__"}